fix text alignment

--- a/components/About/about.css
+++ b/components/About/about.css
@@ -17,6 +17,7 @@
     line-height: 1.5;
     text-align: center;
     max-width: 950px;
+    margin: 0 auto;
 }
 
 .contentText a {
